--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
         "vite": "^5.4.11"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.23",
+        "@heroicons/vue": "^2.2.0",
         "@vitejs/plugin-vue": "^5.2.1",
         "laravel-mix": "^6.0.49",
+        "nprogress": "^0.2.0",
         "pinia": "^2.3.0",
         "vue": "^3.0.0",
         "vue-loader": "^17.3.1",
