--- a/package.json
+++ b/package.json
@@ -15,15 +15,20 @@
         "vite": "^5.4.11"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.2",
         "@headlessui/vue": "^1.7.23",
         "@heroicons/vue": "^2.2.0",
         "@vitejs/plugin-vue": "^5.2.1",
         "laravel-mix": "^6.0.49",
         "nprogress": "^0.2.0",
         "pinia": "^2.3.0",
-        "vue": "^3.0.0",
+        "primeflex": "^3.3.1",
+        "primeicons": "^7.0.0",
+        "primevue": "^4.2.5",
+        "vue": "^3.5.13",
         "vue-loader": "^17.3.1",
         "vue-router": "^4.0.13",
+        "vue3-carousel": "^0.13.0",
         "vuex": "^4.1.0"
     }
 }
