--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,12 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "post-install-cmd": [
+            "php artisan key:generate",
+            "php artisan config:cache",
+            "php artisan migrate --force"
+          ]
     },
     "extra": {
         "laravel": {
