--- a/.env
+++ b/.env
@@ -62,5 +62,7 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 VITE_API_URL=http://localhost:8000/api
 
 JWT_ALGO=HS256
+JWT_TTL=60
+JWT_REFRESH_TTL=null
 
 
