--- a/package.json
+++ b/package.json
@@ -7,28 +7,34 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.10",
+        "@types/tailwindcss": "^3.1.0",
+        "@vitejs/plugin-vue": "^5.2.1",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.9",
         "laravel-vite-plugin": "^1.1.1",
         "postcss": "^8.4.49",
+        "postcss-import": "^16.1.0",
         "tailwindcss": "^3.4.17",
+        "unplugin-vue-components": "^28.0.0",
         "vite": "^5.4.11"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
-        "@headlessui/vue": "^1.7.23",
-        "@heroicons/vue": "^2.2.0",
-        "@vitejs/plugin-vue": "^5.2.1",
+        "@primevue/auto-import-resolver": "4.2.5",
+        "@primevue/forms": "^4.2.5",
+        "@primevue/themes": "^4.2.5",
+        "autoprefixer": "^10.4.16",
         "laravel-mix": "^6.0.49",
         "nprogress": "^0.2.0",
         "pinia": "^2.3.0",
         "primeflex": "^3.3.1",
         "primeicons": "^7.0.0",
-        "primevue": "^4.2.5",
+        "primevue": "4.2.5",
+        "tailwindcss": "^3.4.1",
+        "tailwindcss-primeui": "^0.4.0",
         "vue": "^3.5.13",
         "vue-loader": "^17.3.1",
         "vue-router": "^4.0.13",
-        "vue3-carousel": "^0.13.0",
-        "vuex": "^4.1.0"
+        "vuex": "^4.0.2"
     }
 }
