--- a/.env
+++ b/.env
@@ -65,4 +65,6 @@ JWT_ALGO=HS256
 JWT_TTL=60
 JWT_REFRESH_TTL=null
 
-
+CLOUDINARY_CLOUD_NAME=dm9kdkvce
+CLOUDINARY_API_KEY=369397498343383
+CLOUDINARY_API_SECRET=8L6G2tKm5mZ_NVV2edC8ySfpznw
