--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
         "vite": "^5.4.11"
     },
     "dependencies": {
+        "@cloudinary/url-gen": "^1.21.0",
+        "@cloudinary/vue": "^1.13.0",
         "@fortawesome/fontawesome-free": "^6.7.2",
+        "@headlessui/vue": "^1.7.23",
+        "@heroicons/vue": "^2.2.0",
         "@primevue/auto-import-resolver": "4.2.5",
         "@primevue/forms": "^4.2.5",
         "@primevue/themes": "^4.2.5",
