--- a/.env
+++ b/.env
@@ -65,6 +65,7 @@ JWT_ALGO=HS256
 JWT_TTL=60
 JWT_REFRESH_TTL=null
 
+CLOUDINARY_URL=cloudinary://369397498343383:8L6G2tKm5mZ_NVV2edC8ySfpznw@dm9kdkvce
 CLOUDINARY_CLOUD_NAME=dm9kdkvce
 CLOUDINARY_API_KEY=369397498343383
 CLOUDINARY_API_SECRET=8L6G2tKm5mZ_NVV2edC8ySfpznw
