--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "@primevue/auto-import-resolver": "4.2.5",
         "@primevue/forms": "^4.2.5",
         "@primevue/themes": "^4.2.5",
+        "@vuelidate/core": "^2.0.3",
+        "@vuelidate/validators": "^2.0.4",
         "autoprefixer": "^10.4.16",
         "laravel-mix": "^6.0.49",
         "nprogress": "^0.2.0",
