--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.16",
         "@types/tailwindcss": "^3.1.0",
         "@vitejs/plugin-vue": "^5.2.1",
         "autoprefixer": "^10.4.20",
@@ -31,12 +32,16 @@
         "@vuelidate/core": "^2.0.3",
         "@vuelidate/validators": "^2.0.4",
         "autoprefixer": "^10.4.16",
+        "dompurify": "^3.2.4",
+        "laravel-echo": "^2.0.2",
         "laravel-mix": "^6.0.49",
         "nprogress": "^0.2.0",
         "pinia": "^2.3.0",
         "primeflex": "^3.3.1",
         "primeicons": "^7.0.0",
         "primevue": "4.2.5",
+        "pusher-js": "^8.4.0",
+        "quill": "^2.0.3",
         "tailwindcss": "^3.4.1",
         "tailwindcss-primeui": "^0.4.0",
         "vue": "^3.5.13",
