--- a/.env
+++ b/.env
@@ -30,9 +30,9 @@ PUSHER_APP_ID=986278
 PUSHER_APP_KEY=d8f4892a49a37b031dbb
 PUSHER_APP_SECRET=4c688bf9c0834dc86567
 PUSHER_APP_CLUSTER=ap1
-PUSHER_HOST=
-PUSHER_PORT=443
-PUSHER_SCHEME=https
+
+
+
 
 # Vite - Frontend Realtime Vars (exposed to browser)
 VITE_APP_NAME="${APP_NAME}"
@@ -70,3 +70,13 @@ CLOUDINARY_URL=cloudinary://369397498343383:8L6G2tKm5mZ_NVV2edC8ySfpznw@dm9kdkvc
 CLOUDINARY_CLOUD_NAME=dm9kdkvce
 CLOUDINARY_API_KEY=369397498343383
 CLOUDINARY_API_SECRET=8L6G2tKm5mZ_NVV2edC8ySfpznw
+
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=careerhub.contact@gmail.com
+MAIL_PASSWORD=lldfzobyvrfgilew
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=careerhub.contact@gmail.com
+MAIL_FROM_NAME="Career Hub"
