--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@vuelidate/core": "^2.0.3",
         "@vuelidate/validators": "^2.0.4",
         "autoprefixer": "^10.4.16",
+        "chart.js": "^4.4.9",
         "dompurify": "^3.2.4",
         "laravel-echo": "^2.0.2",
         "laravel-mix": "^6.0.49",
@@ -39,7 +40,7 @@
         "pinia": "^2.3.0",
         "primeflex": "^3.3.1",
         "primeicons": "^7.0.0",
-        "primevue": "4.2.5",
+        "primevue": "^4.3.3",
         "pusher-js": "^8.4.0",
         "quill": "^2.0.3",
         "tailwindcss": "^3.4.1",
